--- a/package.json
+++ b/package.json
@@ -12,29 +12,37 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@mantine/carousel": "^7.5.0",
     "@mantine/charts": "^7.5.0",
     "@mantine/code-highlight": "^7.4.2",
-    "@mantine/core": "^7.4.2",
-    "@mantine/dates": "^7.4.2",
+    "@mantine/core": "^7.5.2",
+    "@mantine/dates": "^7.5.2",
     "@mantine/dropzone": "^7.4.2",
     "@mantine/form": "^7.4.2",
-    "@mantine/hooks": "^7.4.2",
+    "@mantine/hooks": "^7.5.2",
     "@mantine/modals": "^7.4.2",
-    "@mantine/notifications": "^7.4.2",
+    "@mantine/notifications": "^7.5.2",
     "@mantine/nprogress": "^7.4.2",
     "@mantine/spotlight": "^7.4.2",
     "@mantine/styles": "^6.0.21",
-    "@mantine/tiptap": "^7.4.2",
+    "@mantine/tiptap": "^7.5.2",
     "@mantinex/mantine-logo": "^1.0.1",
-    "@tabler/icons-react": "^2.46.0",
-    "@tiptap/extension-link": "^2.1.16",
-    "@tiptap/react": "^2.1.16",
-    "@tiptap/starter-kit": "^2.1.16",
+    "@tabler/icons-react": "^2.47.0",
+    "@tiptap/extension-highlight": "^2.2.2",
+    "@tiptap/extension-link": "^2.2.2",
+    "@tiptap/extension-subscript": "^2.2.2",
+    "@tiptap/extension-superscript": "^2.2.2",
+    "@tiptap/extension-text-align": "^2.2.2",
+    "@tiptap/extension-underline": "^2.2.2",
+    "@tiptap/pm": "^2.2.2",
+    "@tiptap/react": "^2.2.2",
+    "@tiptap/starter-kit": "^2.2.2",
     "dayjs": "^1.11.10",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^8.0.0-rc20",
     "framer-motion": "^11.0.3",
+    "mantine-react-table": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
