--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "@tiptap/pm": "^2.2.2",
     "@tiptap/react": "^2.2.2",
     "@tiptap/starter-kit": "^2.2.2",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^8.0.0-rc20",
     "framer-motion": "^11.0.3",
     "mantine-react-table": "^1.3.4",
+    "ra-data-json-server": "^4.16.11",
     "react": "^18.2.0",
+    "react-admin": "^4.16.11",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
@@ -51,6 +54,7 @@
     "recharts": "2"
   },
   "devDependencies": {
+    "@types/node": "^20.11.19",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-scroll": "^1.8.10",
